GRHB-571: * fixed text overlap in side menu

--- a/frontend/src/components/common/authorized-menu/styles.module.scss
+++ b/frontend/src/components/common/authorized-menu/styles.module.scss
@@ -3,8 +3,8 @@
   top: 96px;
   display: flex;
   flex-direction: column;
-  width: 295px;
-  min-width: 295px;
+  width: 338px;
+  min-width: 338px;
   height: calc(100vh - 96px);
   padding: 35px;
   overflow-x: hidden;
