--- a/frontend/src/components/common/header/styles.module.scss
+++ b/frontend/src/components/common/header/styles.module.scss
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 295px;
+  width: 338px;
   margin-left: 3px;
   border-right: 3px solid var(--background-gray-400);
 }
